# wb_parser

./: .dockerignore  .gitignore  Dockerfile  FSM.py  README.md  callbacks.py  database.py  exel.py  file.py  functions.py  google_sheets.py  keyboards.py  loggs.txt  main.py  parse.py  pyproject.toml  requirements.txt  salute.py  test.py  users.db-shm  users.db-wal  wb_api.py
.github/workflows/: ci.yml
tables/: ~$Коэффициенты складов.xlsx  Коэффициенты складов.xlsx
tests/: pytest.ini  test_functions_file.py
